WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
261447
Fix typo handleLowModePowerChange -> handleLowPowerModeChange
https://bugs.webkit.org/show_bug.cgi?id=261447
Summary
Fix typo handleLowModePowerChange -> handleLowPowerModeChange
Michael Catanzaro
Reported
2023-09-11 17:09:09 PDT
Fix typo handleLowModePowerChange -> handleLowPowerModeChange
Attachments
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2023-09-11 17:10:11 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/17678
EWS
Comment 2
2023-09-12 05:40:29 PDT
Committed
267898@main
(501318a01eda): <
https://commits.webkit.org/267898@main
> Reviewed commits have been landed. Closing PR #17678 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-09-12 05:41:15 PDT
<
rdar://problem/115350694
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug