Fix typo handleLowModePowerChange -> handleLowPowerModeChange https://bugs.webkit.org/show_bug.cgi?id=261447

Reviewed by Chris Dumez.

* Source/WebCore/page/Page.cpp:
(WebCore::Page::Page):
(WebCore::Page::setLowPowerModeEnabledOverrideForTesting):
(WebCore::Page::handleLowPowerModeChange):
(WebCore::Page::handleLowModePowerChange): Deleted.
* Source/WebCore/page/Page.h:

Canonical link: https://commits.webkit.org/267898@main